--- a/index.html
+++ b/index.html
@@ -1,23 +1,36 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 <head>
     <meta charset="utf-8">
     <title>Primera Página</title>
+    <meta name="description" content="Debe contener las palabras clave, tratar de atraer clicks y de longitud entre 150 y 160 caracteres">
+    <link rel="StyleSheet" href="css/style.css" type="text/css">
+    <link rel="shortcut icon" href="/favicon.ico" />
 </head>
 <body>
     <!-- Encabezado -->
     <header>
         <h1>Mi Primera P&aacute;gina Web</h1>
     </header>
-    <nav><!-- Aqui va el menú de navegación --></nav>
+    <nav><!-- Aqui va el menú de navegación -->
+    <ul>
+        <li><a href="#">Inicio</a></li>
+        <li><a href="#">Quienes Somos</a></li>
+        <li><a href="#">Nuestros Productos</a></li>
+        <li><a href="#">Contacto</a></li>
+    </ul>
+    </nav>
     <!-- Sección Principal -->
     <section>
         <article>
+        <h2>Titilo de contenido</h2>
         <p>Hola Mundo</p>
         </article>
     </section>
     <aside> 
         <!--Seccion complementaria -->
+         <h3>Titulo de contenido</h3>
+           <p>contenido</p>
     </aside>
     <footer>
         <cite> Derechos Reservados 2021</cite>
